wrapper/include/Rtsi/Elite_Rtsi_C.h

typedef struct elite_rtsi_io_handle_t elite_rtsi_io_handle_t;
ELITE_C_EXPORT void elite_rtsi_io_destroy(elite_rtsi_io_handle_t* handle);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_out_bool_registers32_to_63(elite_rtsi_io_handle_t* handle,
                                                                              uint32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_in_bool_registers0_to_31(elite_rtsi_io_handle_t* handle,
                                                                            uint32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_in_bool_registers32_to_63(elite_rtsi_io_handle_t* handle,
                                                                             uint32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_in_bool_register(elite_rtsi_io_handle_t* handle, int32_t index,
                                                                   int32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_out_bool_register(elite_rtsi_io_handle_t* handle, int32_t index,
                                                                    int32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_in_int_register(elite_rtsi_io_handle_t* handle, int32_t index,
                                                                  int32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_out_int_register(elite_rtsi_io_handle_t* handle, int32_t index,
                                                                   int32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_in_double_register(elite_rtsi_io_handle_t* handle, int32_t index,
                                                                     double* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_out_double_register(elite_rtsi_io_handle_t* handle, int32_t index,
                                                                      double* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_recipe_value_double(elite_rtsi_io_handle_t* handle, const char* name,
                                                                      double* out_value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_recipe_value_int32(elite_rtsi_io_handle_t* handle, const char* name,
                                                                     int32_t* out_value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_recipe_value_uint32(elite_rtsi_io_handle_t* handle, const char* name,
                                                                      uint32_t* out_value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_recipe_value_bool(elite_rtsi_io_handle_t* handle, const char* name,
                                                                    int32_t* out_value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_recipe_value_vector3d(elite_rtsi_io_handle_t* handle, const char* name,
                                                                        double* out_value3, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_recipe_value_vector6d(elite_rtsi_io_handle_t* handle, const char* name,
                                                                        double* out_value6, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_set_input_recipe_value_double(elite_rtsi_io_handle_t* handle, const char* name,
                                                                            double value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_set_input_recipe_value_int32(elite_rtsi_io_handle_t* handle, const char* name,
                                                                           int32_t value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_set_input_recipe_value_uint32(elite_rtsi_io_handle_t* handle, const char* name,
                                                                            uint32_t value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_set_input_recipe_value_bool(elite_rtsi_io_handle_t* handle, const char* name,
                                                                          int32_t value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_set_input_recipe_value_vector6d(elite_rtsi_io_handle_t* handle, const char* name,
                                                                               const double* value6, int32_t* out_success);
ELITE_C_EXPORT const char* elite_rtsi_io_last_error_message(elite_rtsi_io_handle_t* handle);