dotnet/EliteRobots.CSharp/src/NativeMethods.Rtsi.cs


    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_get_out_bool_registers32_to_63(nint handle, out uint outValue);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_get_in_bool_registers0_to_31(nint handle, out uint outValue);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_get_in_bool_registers32_to_63(nint handle, out uint outValue);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_get_in_bool_register(nint handle, int index, out int outValue);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_get_out_bool_register(nint handle, int index, out int outValue);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_get_in_int_register(nint handle, int index, out int outValue);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_get_out_int_register(nint handle, int index, out int outValue);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_get_in_double_register(nint handle, int index, out double outValue);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_get_out_double_register(nint handle, int index, out double outValue);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_get_recipe_value_double(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        out double outValue,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_get_recipe_value_int32(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        out int outValue,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_get_recipe_value_uint32(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        out uint outValue,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_get_recipe_value_bool(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        out int outValue,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_get_recipe_value_vector3d(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [Out] double[] outValue3,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_get_recipe_value_vector6d(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [Out] double[] outValue6,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_set_input_recipe_value_double(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        double value,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_set_input_recipe_value_int32(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        int value,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_set_input_recipe_value_uint32(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        uint value,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_set_input_recipe_value_bool(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        int value,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_io_set_input_recipe_value_vector6d(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [In] double[] value6,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern nint elite_rtsi_io_last_error_message(nint handle);
}

internal sealed class EliteRtsiIOSafeHandle : SafeHandleZeroOrMinusOneIsInvalid
{
    internal EliteRtsiIOSafeHandle()
        : base(ownsHandle: true)
    {
    }

    internal EliteRtsiIOSafeHandle(nint preexistingHandle)
        : base(ownsHandle: true)
    {
        SetHandle(preexistingHandle);
    }

    protected override bool ReleaseHandle()
    {
        NativeMethods.elite_rtsi_io_destroy(handle);
        return true;
    }
}
